--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@types/multer": "^1.4.12",
+    "lucide-react": "^0.471.1",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
