--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "video-recorder",
   "private": true,
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/node": "^22.10.7",
     "prettier": "^3.2.5",
     "turbo": "^2.3.3",
-    "typescript": "5.5.4"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=18"
@@ -19,5 +21,10 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "fluent-ffmpeg": "^2.1.3",
+    "mongodb": "^6.12.0",
+    "openai": "^4.78.1"
+  }
 }
