--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@repo/ui": "^0.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "mongodb": "^6.12.0",
     "openai": "^4.78.1"
