--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack --port 3000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint --max-warnings 0",
-    "check-types": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@repo/ui": "*",
-    "@types/multer": "^1.4.12",
-    "lucide-react": "^0.471.1",
-    "next": "^15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "@types/node": "^20",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "typescript": "5.5.4"
+    "name": "web",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+      "dev": "next dev --port 3000",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint --max-warnings 0",
+      "check-types": "tsc --noEmit"
+    },
+    "dependencies": {
+      "@repo/ui": "*",
+      "@types/multer": "^1.4.12",
+      "lucide-react": "^0.471.1",
+      "next": "14.1.0",
+      "react": "18.2.0",
+      "react-dom": "18.2.0"
+    },
+    "devDependencies": {
+      "@repo/eslint-config": "*",
+      "@repo/typescript-config": "*",
+      "@types/node": "^20",
+      "@types/react": "^18.2.0",
+      "@types/react-dom": "^18.2.0",
+      "autoprefixer": "^10.4.17",
+      "postcss": "^8.4.35",
+      "tailwindcss": "^3.4.1",
+      "typescript": "^5.3.3"
+    }
   }
-}
