--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/node": "^22.10.7",
     "prettier": "^3.2.5",
     "turbo": "^2.3.3",
-    "typescript": "^5.5.4"
+    "typescript": "^5.7.3"
   },
   "engines": {
     "node": ">=18"
@@ -24,8 +24,14 @@
   ],
   "dependencies": {
     "@repo/ui": "^0.0.0",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "fluent-ffmpeg": "^2.1.3",
+    "lucide-react": "^0.471.1",
     "mongodb": "^6.12.0",
-    "openai": "^4.78.1"
+    "next": "^15.1.4",
+    "openai": "^4.78.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
