--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "npm run build",
+    "buildCommand": "npm run build --prefix apps/web",
     "outputDirectory": "apps/web/.next",
     "framework": "nextjs",
     "rewrites": [
