--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-    "buildCommand": "npm run build --prefix apps/web",
-    "outputDirectory": "apps/web/.next",
+    "buildCommand": "cd apps/web && npm run build",
+    "outputDirectory": ".next",
     "framework": "nextjs",
     "rewrites": [
       {
