--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-    "buildCommand": "cd apps/web && npm run build",
+    "buildCommand": "cd apps/web && npm install && npm run build",
     "outputDirectory": ".next",
-    "framework": "nextjs",
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/apps/web/$1"
-      }
-    ]
+    "framework": "nextjs"
   }
